--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -9,11 +9,7 @@
             - @item.images.each_with_index do |pic, i|
               = image_tag pic.image.url, data: { index: i }, width: "200", height: '200'
         = f.fields_for :images do |pic|
-          .announce_picuture
-            = icon('fas','camera')
-            １枚以上
-            %span.important ※必須
-            (最大４枚まで)
+
           .js-file_group{"data-index" => "#{pic.index}"}
             = pic.file_field :image, class: 'js-file'
             %br/
@@ -62,14 +58,14 @@
           商品の状態
           %span.important ※必須
         .new-main__name--detail
-          = f.text_field :state, { class:'new-main__name--detail', placeholder: '新品、未使用' }      
+          = f.collection_select :state_id,  State.all, :id, :condition, {}, { class: 'new-main__name--detail--prefecture' }
    
       .new-main__postage.new-main__name
         .new-main__name--title
           配送料金
           %span.important ※必須
         .new-main__name--detail
-          = f.text_field :postage, { class:'new-main__name--detail', placeholder: '８００円' }
+          = f.text_field :postage, { class:'new-main__name--detail', placeholder: '半角数字、円不要　例：200' }
              
       .new-main__shipping-date.new-main__name
         .new-main__name--title
@@ -90,7 +86,7 @@
           商品の価格
           %span.important ※必須
         .new-main__name--detail
-          = f.text_field :price, { class:'new-main__name--detail', placeholder: '¥300 ~ ¥2,000,000' }  
+          = f.text_field :price, { class:'new-main__name--detail', placeholder: '半角数字、円不要　例：200' }  
 
       .new-main__submit
-        = f.submit '出品する', class: 'new-main__submit--btn'
+        = f.submit '編集する', class: 'new-main__submit--btn'
