--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -71,7 +71,7 @@
               %tr.tr
                 %th.th 商品の状態
                 %td.td 
-                  = @item.state
+                  = @item.state.condition
               %tr.tr
                 %th.th 配送料
                 %td.td 
