--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -34,6 +34,10 @@ a:hover {
           width: 140px;
         }
       }
+      &__icon2{
+        margin: 0 auto;
+        padding-right: 32px;
+      }
       &__sarch {
         padding-bottom: 8px;
         width: 80%;
