--- a/app/assets/stylesheets/signup/_step2.scss
+++ b/app/assets/stylesheets/signup/_step2.scss
@@ -1,13 +1,9 @@
-* {
-  box-sizing: border-box;
-}
-
 #account-page.account-page{
   width: 100%;
-  height: 100vh;
+  height: 100%;
   .account-page__inner{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     padding: 0 100px;
     background-color: rgb(247, 247, 247);
     font-size: 20px;
