--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,5 @@
 #account-page.account-page
+  = render "items/header_2"
   .account-page__inner.clearfix
     .account-page__inner--left.account-page__header
       %h2 Edit Account
