--- a/app/views/cards/show.html.haml
+++ b/app/views/cards/show.html.haml
@@ -1,15 +1,13 @@
 .top
-%label 登録クレジットカード情報
-%br
-= "**** **** **** " + @default_card_information.last4
-%br
-- exp_month = @default_card_information.exp_month.to_s
-- exp_year = @default_card_information.exp_year.to_s.slice(2,3)
-= exp_month + " / " + exp_year
-= form_tag(delete_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
-  %input{ type: "hidden", name: "card_id", value: "" }
-  %button 削除する
-
+  %label 登録クレジットカード情報
+  %br
+  = "**** **** **** " + @default_card_information.last4
+  %br
+  - exp_month = @default_card_information.exp_month.to_s
+  - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+  = exp_month + " / " + exp_year
+  = link_to delete_cards_path(@card.id), method: :delete, class:"#" do
+    消去する
 .top__cade
   %br
   =link_to users_path do
