--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -18,7 +18,7 @@
             %i.fas.fa-sign-out-alt
             ログアウト
         %li.nav__right--second.ul_Nav
-          = link_to "#" , class: 'a' do
+          = link_to users_path , class: 'a' do
             %i.fas.fa-user-cog
             マイページ      
       - else
