--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -9,7 +9,7 @@
         様のマイページ
         -# current_useridで呼ぶ
       .conten__main__link
-        = link_to destroy_user_session_path, class: "link-text" do
+        = link_to user_registration_path,method: :delete, class: "link-text" do
           ログアウト
           = icon('fas', 'running', class: 'icon')
   .conten__sabu
