--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -178,6 +178,10 @@
               line-height: 50px;
             }
           }
+          &__edit {
+            margin-top: 20px;
+            font-size: 20px;
+          }
         }
         &__links {
           color: darkturquoise;
