--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -107,6 +107,13 @@
               = link_to purchase_path(@item.id), class: "buy" do
                 %i.fas.fa-shopping-cart
                   購入する
+            .main__box__contents__bottom__edit
+              - if user_signed_in? && current_user.id == @item.seller_id
+                = link_to edit_item_path do
+                  編集
+                = link_to item_path(@item.id),method: :delete do
+                  削除
+                  
         .main__box__contents__links
           .main__box__contents__links__top
             = link_to "#",class:'link' do
