--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -167,6 +167,10 @@
               cursor: pointer;
               line-height: 50px;
             }
+            .link {
+              border: 2px solid black;
+              padding: 15px;
+            }
             .buy {
               background-color: red;
               border-radius: 100px;
