--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,15 +13,13 @@
           ログアウト
           = icon('fas', 'running', class: 'icon')
   .conten__sabu
-    .conten__sabu--box
-      .conten__sabu--cade
-        クレジットカード情報
-        %br
-        = link_to new_card_path do
-          登録
-        %br
-        = link_to card_path(current_user) do
-          変更
-      .conten__sabu--out
-        = link_to  user_registration_path,method: :delete do
-          ログアウト
+    .conten__sabu__box
+      .conten__sabu__box__cade
+        .conten__sabu__box__cade__title
+          クレジットカード情報
+        .conten__sabu__box__cade__btn
+          = link_to new_card_path do
+            登録
+          %br
+          = link_to card_path(current_user) do
+            変更
