--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,14 +1,23 @@
-= form_with url:pay_cards_path, local: true, id: "inputForm" do |f|
-  = f.label "カード番号"
-  = f.text_field "number", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
-  %br
-  = f.label "有効期限"
-  = f.select :exp_month,[["01" ,1],["02" ,2],["03" ,3],["04",4],["05" ,5],["06" ,6],["07" ,7],["08" ,8],["09" ,9],["10" ,10],["11" ,11],["12" ,12]],{}, {id: "exp_month"}
-  %span 月/
-  = f.select :exp_year, [["2020" ,2020],["2021" ,2021],["2022" ,2022],["2023",2023],["2024" ,2024],["2025" ,2025],["2026" ,2026],["2027" ,2027]], {}, {id: "exp_year"}
-  %span 年
-  %br
-  = f.label "セキュリティコード"
-  = f.text_field "cvc",class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc"
-  #card_token
-  = f.submit "追加する", id: "token_submit"
+.card
+  .card__main
+    .card__main__title
+      .card__main__title__image
+        = link_to items_path do
+          = image_tag "logo.png",width: "120",height:"70"
+      .card__main__title__text
+        クレジットカード登録  
+    .card__main__info
+      = form_with url:pay_cards_path, local: true, id: "inputForm" do |f|
+        = f.label "カード番号"
+        = f.text_field "number", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
+        %br
+        = f.label "有効期限"
+        = f.select :exp_month,[["01" ,1],["02" ,2],["03" ,3],["04",4],["05" ,5],["06" ,6],["07" ,7],["08" ,8],["09" ,9],["10" ,10],["11" ,11],["12" ,12]],{}, {id: "exp_month"}
+        %span 月/
+        = f.select :exp_year, [["2020" ,2020],["2021" ,2021],["2022" ,2022],["2023",2023],["2024" ,2024],["2025" ,2025],["2026" ,2026],["2027" ,2027]], {}, {id: "exp_year"}
+        %span 年
+        %br
+        = f.label "セキュリティコード"
+        = f.text_field "cvc",class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc"
+        #card_token
+        = f.submit "登録する", id: "token_submit"
