--- a/app/views/buy_page.html.haml
+++ b/app/views/buy_page.html.haml
@@ -9,15 +9,21 @@
           購入しますか？
         .body__box__main__item
           .body__box__main__item__name
-            商品名
+            = @item.name
           .body__box__main__item__price
-            2000円(税込み)
+            = @item.price
+            円(税込み)
         .body__box__main__pay
           .body__box__main__pay__top
             支払い方法（クレジットカード）
           .body__box__main__pay__bottom
-            カード番号
-            日付
+            - if @default_card_information.blank?
+              %br /
+            - else
+              = "**** **** **** " + @default_card_information.last4
+              - exp_month = @default_card_information.exp_month.to_s
+              - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+              = exp_month + " / " + exp_year
         .body__box__main__btns
           .body__box__main__btns__back
             = link_to "< 戻る", :back ,class:'back-link' 
