--- a/app/views/purchase/show.html.haml
+++ b/app/views/purchase/show.html.haml
@@ -19,3 +19,35 @@
 
 = form_with url: pay_purchase_path do |f|
   =f.submit "購入する"
+
+  -# .page
+  -# .head
+  -#   .head__title
+  -#     FURIMA
+  -# .body
+  -#   .body__box
+  -#     .body__box__main
+  -#       .body__box__main__title
+  -#         購入しますか？
+  -#       .body__box__main__item
+  -#         .body__box__main__item__name
+  -#           = @item.name
+  -#         .body__box__main__item__price
+  -#           = @item.price
+  -#           円(税込み)
+  -#       .body__box__main__pay
+  -#         .body__box__main__pay__top
+  -#           支払い方法（クレジットカード）
+  -#         .body__box__main__pay__bottom
+  -#           - if @default_card_information.blank?
+  -#             %br /
+  -#           - else
+  -#             = "**** **** **** " + @default_card_information.last4
+  -#             - exp_month = @default_card_information.exp_month.to_s
+  -#             - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+  -#             = exp_month + " / " + exp_year
+  -#       .body__box__main__btns
+  -#         .body__box__main__btns__back
+  -#           = link_to "< 戻る", :back ,class:'back-link' 
+  -#         .body__box__main__btns__buy
+  -#           購入する
