--- a/app/views/items/_main.html.haml
+++ b/app/views/items/_main.html.haml
@@ -97,7 +97,7 @@
     %ul.List      
       - @items.each do |item|
         %li.First
-          = link_to item_path(item), class: 'a' do
+          = link_to item_path(item.id), class: 'a' do
             .img
               = image_tag "#{item.images.first.image}",class:"pic_up_container__products__box--image"
             .info
